# goit-pyweb-hw-08

./: main.py  pyproject.toml  requirements.txt
db/: __init__.py  connect.py  load_data.py  models.py
scrap/quotes_scraper/quotes_scraper/spiders/: quotes.py
second_task/: consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py  run_all.py
