[tool.poetry]
name = "goit-pyweb-hw-08"
version = "0.1.0"
description = ""
authors = ["Amolit <MikeKukPer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {extras = ["srv", "tls"], version = "^4.6.2"}
pika = "^1.3.2"
mongoengine = "^0.28.2"
faker = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
